--- a/index.html
+++ b/index.html
@@ -230,98 +230,85 @@
                 <h2 class="portfolio-title-sybject">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <a href="#" class="overlay-link">
-                            <div class="overlay">
-                                <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300">
-                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                    App
-                                    · Calorie Tracker App
-                                    · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
-                        </a>
+                        <div class="overlay">
+                            <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300">
+                            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Banking App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="overlay-link">
-                            <div class="overlay">
-                                <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360"
-                                    height="300">
-                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                    App
-                                    · Calorie Tracker App
-                                    · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
-                        </a>
+                        <div class="overlay">
+                            <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300">
+                            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Cashless Payment</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="overlay-link">
-                            <div class="overlay">
-                                <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" height="300">
-                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                    App
-                                    · Calorie Tracker App
-                                    · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
-                        </a>
+                        <div class="overlay">
+                            <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" height="300">
+                            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Meditation App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="overlay-link">
-                            <div class="overlay">
-                                <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300">
-                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                    App
-                                    · Calorie Tracker App
-                                    · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
-                        </a>
+                        <div class="overlay">
+                            <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300">
+                            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Taxi Service</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="overlay-link">
-                            <div class="overlay">
-                                <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360"
-                                    height="300">
-                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                    App
-                                    · Calorie Tracker App
-                                    · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
-                        </a>
+                        <div class="overlay">
+                            <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360"
+                                height="300">
+                            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Screen Illustrations</h3>
                             <p class="portfolio-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="overlay-link">
-                            <div class="overlay">
-                                <img src="./images/online_courses.jpg" alt="Online Courses" width="360" height="300">
-                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
-                                    App
-                                    · Calorie Tracker App
-                                    · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App</p>
-                            </div>
-                        </a>
+                        <div class="overlay">
+                            <img src="./images/online_courses.jpg" alt="Online Courses" width="360" height="300">
+                            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                App
+                                · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-item-block">
                             <h3 class="portfolio-title">Online Courses</h3>
                             <p class="portfolio-text">Marketing</p>
